<resources>
    <string name="app_name">Biotic</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="SENDER_ID">347339339621</string>
    <string name="notifications_admin_channel_name">Biotic</string>
    <string name="notifications_admin_channel_description">Firebase PushNotification</string>
    <string name="newest_product">Newest Products</string>
    <string name="see_all">See All</string>
    <string name="product_name_demo">product_name_demo</string>
    <string name="price_demo">1200 SAR</string>
    <string name="newest_bundles">Bundles</string>
    <string name="large_text">
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="action_cart">Cart</string>
    <string name="action_search">Search</string>
    <string name="item_name">Item Name</string>
    <string name="type">Type: </string>
    <string name="nutrition"> Nutrition</string>
    <string name="_15_sr">15.00 SR</string>
    <string name="tab_text_1">Description</string>
    <string name="tab_text_2">Reviews</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="items_150">150 items</string>
    <string name="products">Products</string>
    <string name="lib_name">Alerter</string>
    <string name="msg.alert_cleared">Alert Cleared</string>
    <string name="msg.no_alert_showing">No Alert Showing</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_search">Search</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="firas_alateeq">Firas Alateeq</string>
    <string name="firas_email">Firas@biotic.sa</string>
    <string name="my_account">My Account</string>
    <string name="help_amp_faq"><![CDATA[Help & FAQ]]></string>
    <string name="contact_us">\nContact Us</string>
    <string name="help">\nHelp</string>
    <string name="my_orders">\nMy Orders</string>
    <string name="manage_naccount">Manage\nAccount</string>
    <string name="change">Change</string>
    <string name="account_information">Account Information</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="change_password">Change Password</string>
    <string name="change_language">Change Language</string>
    <string name="screen_is_under_development">Screen is under Development</string>
    <string name="now">Now</string>
    <string name="was">Was</string>
    <string name="login">Login</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="remember">Remember me</string>
    <string name="new_here">New here?</string>
    <string name="sign_up">Sign up!</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="join_us">Join Us!</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="cal">500</string>
    <string name="_500_cal">500 CAl</string>
    <string name="tab_text_3">Products</string>
    <string name="bundles">Bundles</string>
    <string name="_sar">SAR</string>
    <string name="calName">CAl</string>
    <string name="_15_00_sar_each">15.00 SAR each</string>
    <string name="checkout">Checkout</string>
    <string name="_sar_each">SAR each</string>
    <string name="subtotal">Subtotal</string>
    <string name="taxes">Taxes</string>
    <string name="cart">Cart</string>
    <string name="promo_code">Promo Code</string>
    <string name="promo_code_">Promo Code:</string>
    <string name="percentage">10%</string>
    <string name="apply">Apply</string>
    <string name="purchase">Purchase</string>
    <string name="get_my_location">Get my Location</string>
    <string name="use_my_default_address">Use My Default Address</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="setMyDefault">Set as my default delivery address</string>
    <string name="next">Next</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="confirm">Confirm</string>
    <string name="thank_you">Thank you!</string>
    <string name="your_order_has_been_placed">your order has been placed.</string>
    <string name="order_no">Order No. :</string>
    <string name="order_date">Order Date:</string>
    <string name="your_order">Your Order</string>
    <string name="shipping_date">Shipping Date:</string>
    <string name="finish">Finish</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="logout">Logout</string>
    <string name="reset_password">Reset Password</string>
    <string name="registration">Registration</string>
    <string name="your_information">Your Information</string>
    <string name="save">Save</string>
    <string name="acc_mange">Account Management</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="street_name">Street Name</string>
    <string name="apartment_number">Apartment Number</string>
    <string name="postal_code">Postal Code</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="arabic">Arabic</string>
    <string name="your_orders">Your Orders</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="delivery_date">Delivery date:</string>
    <string name="track_order">Track my order</string>
    <string name="payment_details">Payment Details</string>
    <string name="delivery_method">Delivery Method</string>
    <string name="customer_support">Reach one of our customer support</string>
    <string name="submit">Submit</string>
    <string name="how_was_your_last_order">How was your last order?</string>
    <string name="not_now">Not Now</string>
</resources>