<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/home"
            android:contentDescription="@string/title_home"
            android:icon="@drawable/home_nav"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/search"
            android:contentDescription="@string/title_search"
            android:icon="@drawable/search_colored"

            android:title="@string/title_search" />

    <item
            android:id="@+id/cart"
            android:contentDescription="@string/title_cart"
            android:icon="@drawable/cart_colored"
            app:actionLayout="@layout/menu_cartcount"
            android:title="@string/title_cart" />
    <item
            android:id="@+id/profile"
            android:contentDescription="@string/title_profile"
            android:icon="@drawable/muscle_colored"
            android:title="@string/title_profile" />


</menu>
