<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<!--    <com.airbnb.lottie.LottieAnimationView-->
<!--            android:id="@+id/lottie_done"-->
<!--            android:layout_width="200dp"-->
<!--            android:layout_height="200dp"-->


<!--            android:layout_gravity="center"-->

<!--            />-->

    <TextView
        android:id="@+id/tvPleaseVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_gravity="center"


        android:fontFamily="@font/grenale_conbla"
        android:gravity="center"
        android:text="@string/how_was_your_last_order"
        android:textColor="@color/text_header"
        android:textSize="24dp"
        android:textStyle="bold"
        android:transitionName="tvLogin" />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center">
        <TextView
                android:id="@+id/order_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_gravity="center"


                android:fontFamily="@font/ubuntu_medium"
                android:gravity="center"
                android:text="@string/order_no"
                android:textColor="@color/line_color"
                android:textSize="16sp"

                android:transitionName="tvLogin" />
        <TextView
                android:id="@+id/order_no_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_gravity="center"


                android:fontFamily="@font/ubuntu_medium"
                android:gravity="center"
android:text="12345"
                android:textColor="@color/line_color"
                android:textSize="16sp"

                android:transitionName="tvLogin" />


    </LinearLayout>




    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:id="@+id/updated_rec"
            android:layout_marginTop="16dp"
            />



    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"

            >

        <com.google.android.material.button.MaterialButton
                android:id="@+id/not_now_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="130dp"


                android:layout_height="56dp"


                android:layout_marginBottom="16dp"

                android:background="@color/white"
                android:fontFamily="@font/ubuntu_medium"


                android:text="@string/not_now"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"



                android:theme="@style/Theme.MaterialComponents"

                app:backgroundTint="@android:color/transparent"
                app:cornerRadius="12dp"
                app:iconGravity="textStart"

                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="1dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="130dp"


                android:layout_height="56dp"


                android:layout_marginBottom="16dp"

                android:background="@color/colorPrimary"
                android:fontFamily="@font/ubuntu_medium"

                android:gravity="center"

                android:text="@string/submit"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:textColor="@color/white"
                android:textSize="16sp"


                android:theme="@style/Theme.MaterialComponents"

                app:backgroundTint="@color/colorPrimary"
                app:cornerRadius="12dp"
                app:iconGravity="textStart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:strokeColor="@color/white"
                app:strokeWidth="1dp"

                />

    </androidx.constraintlayout.widget.ConstraintLayout>




</LinearLayout>