<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".fragments.AddressFragment">

        <!-- TODO: Update blank fragment layout -->
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hello_blank_fragment"
                android:visibility="gone" />

        <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"


                android:layout_marginTop="0dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="0dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"

                app:cardElevation="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="32dp"
                    android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                        android:id="@+id/default_address_btn"
                        android:layout_width="220dp"
                        android:layout_height="56dp"

                        android:layout_gravity="center"
                        android:background="@color/colorPrimary"

                        android:fontFamily="@font/ubuntu_medium"
                        android:gravity="center"
                        android:text="@string/use_my_default_address"

                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:theme="@style/Theme.MaterialComponents.Light"

                        app:backgroundTint="@color/colorPrimary"

                        app:cornerRadius="12dp"
                        app:iconGravity="textStart" />


                <com.google.android.material.button.MaterialButton
                        android:id="@+id/my_location_btn"
                        android:layout_width="220dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:background="@color/colorPrimary"
                        android:fontFamily="@font/ubuntu_medium"
                        android:text="@string/get_my_location"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:theme="@style/Theme.MaterialComponents.Light"
                        app:backgroundTint="@color/colorPrimary"
                        app:cornerRadius="12dp"
                        app:iconGravity="textStart" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="156dp"


                android:layout_height="60dp"
                android:layout_marginStart="24dp"

                android:layout_marginBottom="40dp"

                android:background="@color/colorPrimary"
                android:fontFamily="@font/ubuntu_medium"

                android:gravity="center"

                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:textColor="@color/white"
                android:textSize="16sp"


                android:theme="@style/Theme.MaterialComponents"

                app:backgroundTint="@android:color/transparent"
                app:cornerRadius="12dp"
                app:iconGravity="textStart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:strokeColor="@color/white"
                app:strokeWidth="1dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>