<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

    <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="6dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/test_bund_pro" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/price"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent">


        <TextView
                android:id="@+id/product_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/grenale_conbla"


                android:maxLength="30"
                android:maxLines="1"
                android:text="@string/product_name_demo"
                android:textColor="@color/text_header"
                android:textSize="17sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/product_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/ubuntu_regular"
                android:maxLength="30"
                android:maxLines="1"
                android:text="@string/product_name_demo"

                android:textSize="14sp" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp">

            <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/calorie_icon"
                    android:visibility="visible" />

            <TextView
                    android:id="@+id/calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:fontFamily="@font/ubuntu_medium"

                    android:text="@string/_500_cal"
                    android:textColor="@color/purple"
                    android:textSize="12sp"
                    android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>

    <TextView
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_height="19dp"


            android:layout_marginEnd="6dp"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/price_demo"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>